completed the header and nav section

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black  Friday</title>
     <link href="style.css" rel="stylesheet"/>
+    <link href="nav.css" rel="stylesheet"/>
 
     <link
         rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
-    <header>
+    <header class="sticky-container">
         <section class="header-container">
                 <div class="app-container-1">
                     <i class="fa-solid fa-mobile"></i>
@@ -53,6 +54,36 @@
             </div>
         </section>
     </header>
-    
+
+    <!-- Nav-section  -->
+     <nav class="navigation-container">
+        <div>
+            <i class="fa-solid fa-bars"></i>
+            ALL
+        </div>
+        <div> 
+            <a><u> Black Friday Friday </u></a>
+        </div>
+        <div>Best Sellers</div>
+        <div>Prime</div>
+        <div>New Releases</div>
+        <div>Gift Cards</div>
+        <div>Music</div>
+        <div>Books</div>
+        <div>Electronics</div>
+        <div>Fashion</div>
+        <div>Home</div>
+        <div>Beauty</div>
+        
+     </nav>
+    <!-- Black-firday deal     -->
+     <div class="deal-section">
+        <div>Black Friday</div>
+        <p class="black-friday">BLACK FRIDAY DEALS</p>
+        <div >Black Friday</div>
+     </div>
+
+
+     <!-- Main-section  -->
 </body>
 </html>
